--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     </section>End Services Section -->
 
     <!-- ======= Call To Action Section ======= -->
-    <section class="call-to-action">
+    <section id="services" class="call-to-action">
       <div class="container">
         
         <div class="text-center">
