--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
   </header><!-- End #header -->
 
   <!-- ======= Hero Section ======= -->
-  <section >
+  <section style="height: 65vh">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -284,21 +284,22 @@
         <!-- Slide One - Set the background image for this slide in the line below -->
         <div class="carousel-item active" style="background-image: url(assets/img/map.png)">
           <div class="carousel-caption">
-            <h2 class="display-4">LJC</h2>
-            <p class="lead">Planning the academic path and extracurricular activities throughout high school</p>
+            <!-- <h2 class="display-4">LJC</h2> -->
+            <p class="lead" style="font-size: 200%; color: white;"><b>Planning</b></p>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url(assets/img/essay_editing.png)">
           <div class="carousel-caption ">
-            <h2 class="display-4">LJC</h2>
-            <p class="lead">Writing high-quality essays for applications and scholarships</p>
+            <!-- <h2 class="display-4">LJC</h2> -->
+            <p class="lead" style="font-size: 200%; color: white;"><b>Writing</b></p>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url(assets/img/graduation.png)">
           <div class="carousel-caption covid-block">
-            <h2 class="display-4">We are in this together.</h2>
+            <!-- <h2 class="display-4">We are in this together.</h2> -->
+            <p class="lead" style="font-size: 200%; color: white;"><b>Competing</b></p>
             <!-- <p class="lead" style="background: rgba(0, 0, 0, 0.7); border-radius: 3px;">Our Organisation is committed.</p> -->
           </div>
         </div>
@@ -364,15 +365,20 @@
 
     <!-- ======= Call To Action Section ======= -->
     <section id="services" class="call-to-action">
+    <!-- <section id="services" class="services section-bg"> -->
       <div class="container">
         
         <div class="text-center">
           
         <div class="section-title">
-          <h2 style="color: #fff;">Packages</h2>
+          <h2 style="color: #fff;">Services</h2>
         </div>
 
-        <p>Our service packages are tailored to meet common requirements and include a range of essential services.</p>
+		
+        <div>
+            <!-- <h3 style="text-align: left;">Packages</h3> -->
+        	<p>Our service packages are tailored to meet common requirements and include a range of essential services.</p>
+        </div>
 
 			<div class="container-fluid">
 			  <div class="col-md-12">
