--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 .main .container p {
   color: hsla(0, 0%, 100%, .6);
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   text-align: left;
 }
 
@@ -262,7 +262,7 @@
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About Us</a></li>
-          <li><a href="#resutls">Proven Results</a></li>
+          <li><a href="#results">Proven Results</a></li>
           <li><a href="#services">Our Services</a></li>
 		      <li><a href="#contact">Contact Us</a></li>
         </ul>
@@ -348,7 +348,7 @@
     </section><!-- End About Us Section -->
     
     <!-- ======= Proven Results Section ======= -->
-    <section id="results" class="about">
+    <section id="results" class="result">
       <div class="container">
 
         <div class="section-title">
@@ -356,23 +356,15 @@
         </div>
 
         <div>
-          <div>
-            <p class="">
-              Admitted to Northwestern University with acception rate 7%.
-            </p>
-            <p>
-              Admitted to the M&T program of the University of Pennsylvania with acception rate 0.4%.
-            </p>
-            <p>
-              Won the title of Pete Conrad Scholar in the international Conrad Challenge out of 1000 teams.
-            </p>
-            <p>
-              Semifinalist of Roberston Scholar of Duke University.
-            </p>
-            <p>
-              Enrolled in the Management&Technology Summer Institute (M&TSI) run by Penn Engineering and the Wharton School.
-            </p>
-          </div>
+          <!-- <div class="container container--3 "> -->
+          	<ul>
+	          	<li><p>Gained admission to Northwestern University, which has an acceptance rate of 7%.</p></li>
+            	<li><p>Accepted into the prestigious M&T Program at the University of Pennsylvania, with an acceptance rate of just 0.4%.</p></li>
+            	<li><p>Awarded the title of Pete Conrad Scholar in the international Conrad Challenge, competing among >1,000 teams.</p></li>
+            	<li><p>Achieved semifinalist status for the Robertson Scholars Leadership Program at Duke University.</p></li>
+            	<li><p>Completed the Management & Technology Summer Institute (M&TSI), a program offered by Penn Engineering and the Wharton School.</p></li>
+            </ol>
+          <!-- </div> -->
         </div>
 
       </div>
@@ -453,7 +445,7 @@
       </div>
     </section>End Services Section -->
 
-    <!-- ======= Call To Action Section ======= -->
+    <!-- ======= Services Section ======= -->
     <section id="services" class="call-to-action">
     <!-- <section id="services" class="services section-bg"> -->
       <div class="container">
@@ -531,7 +523,7 @@
 			</div>
         </div>
       </div>
-    </section><!-- End Call To Action Section -->
+    </section><!-- End Services Section -->
 
     <!-- ======= Contact Us Section ======= -->
     <section id="contact" class="contact section-bg">
