--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <div class="logo float-left">
         
         <!-- <h1 class="text-light"><a href="index.html"><span>L.J. Consulting</span></a></h1> -->
-        <a href="/"><img src="assets/img/horse.jpg" alt="" class="img-fluid"></a>
+        <a href="/"><img src="logo_white_horse.jpg" alt="" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
@@ -337,7 +337,7 @@
               Experts in college admissions dedicated to guiding high school students through the application process and helping them gain acceptance to their target universities.
             </p> -->
             <p>
-              L.J. Consulting specializes in personalized high school planning, mentoring for research projects, and assisting students with essay editing for college, summer programs, and scholarship applications. We offer customized solutions and diverse service packages to meet individual needs.
+              L.J. Consulting specializes in personalized high school planning, mentoring for research projects, and assisting students with essay editing for U.S. college, summer program, and scholarship applications. We offer customized solutions and diverse service packages to meet individual needs.
             </p>
             <p>
               Schedule a FREE 30-minute consultation to discover the perfect solution tailored to your unique needs.
@@ -380,8 +380,8 @@
 		<div>
 			<h3>College Admissions</h3>
           	<ul>
+            	<li><p>M&T Program at the University of Pennsylvania (acceptance rate of 0.7%).</p></li>
 	          	<li><p>Northwestern University (acceptance rate of 7%).</p></li>
-            	<li><p>M&T Program at the University of Pennsylvania (acceptance rate of just 0.7%).</p></li>
             </ul>
 		</div>
 
@@ -395,15 +395,15 @@
 		<div>
 			<h3>Research Projects</h3>
           	<ul>
-            	<li><p>Awarded the title of Pete Conrad Scholar in the international Conrad Challenge, competing among >5,000 teams.</p></li>
-            	<li><p>Published conference papers including IEEE.</p></li>
+            	<li><p>Pete Conrad Scholar in the international Conrad Challenge, competing among >5,000 teams.</p></li>
+            	<li><p>Conference papers including IEEE.</p></li>
             </ul>
 		</div>
 
 		<div>
 			<h3>Scholarships</h3>
           	<ul>
-            	<li><p>Achieved semifinalist status for the Robertson Scholars Leadership Program at Duke University.</p></li>
+            	<li><p>Robertson Scholars Leadership Program at Duke University.</p></li>
             </ul>
 		</div>
 
@@ -574,7 +574,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="contact-about">
               <h3>L.J. Consulting</h3>
-              <p>Delivering quality services for our times</p>
+              <p>Offering expert guidance and personalized services for U.S. college admissions.</p>
               <div class="social-links">
                 <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
               </div>
